// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LiveLabel should correctly render for RTL service 1`] = `
<div>
  <span
    role="text"
  >
    <span
      aria-hidden="true"
      class="StyledSpan-sc-5gbj69-0 gWnioB"
      dir="rtl"
    >
      LIVE 
    </span>
    <span
      class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
      lang="en-GB"
    >
      Live, 
    </span>
  </span>
</div>
`;

exports[`LiveLabel should render correctly with custom offscreen text 1`] = `
<div>
  <span
    role="text"
  >
    <span
      aria-hidden="true"
      class="StyledSpan-sc-5gbj69-0 gGPbYG"
      dir="ltr"
    >
      LIVE 
    </span>
    <span
      class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
      lang="en-GB"
    >
      Watch Live, 
    </span>
  </span>
</div>
`;

exports[`LiveLabel should render correctly with english live text 1`] = `
<div>
  <span
    role="text"
  >
    <span
      aria-hidden="true"
      class="StyledSpan-sc-5gbj69-0 gGPbYG"
      dir="ltr"
    >
      LIVE 
    </span>
    <span
      class="VisuallyHiddenText-sc-1yjwwa5-0 ldFJPH"
      lang="en-GB"
    >
      Live, 
    </span>
  </span>
</div>
`;

exports[`LiveLabel should render correctly with localised live text 1`] = `
<div>
  <span
    role="text"
  >
    <span
      class="StyledSpan-sc-5gbj69-0 gGPbYG"
      dir="ltr"
    >
      AS E DE HAPPEN 
    </span>
  </span>
</div>
`;
